dev-antonio/springboot-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: springboot-demo-api
  name: springboot-demo-deployment
  namespace: dev-antonio
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: springboot-demo-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: springboot-demo-api
    spec:
      affinity: {}
      containers:
      - image: springboot-demo:1.0.0
        imagePullPolicy: Never
        name: container-0
        resources:
          limits:
            cpu: 500m
            memory: 768Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
